; ModuleID = '/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_kxgettext.c_file_line__new.c'
source_filename = "/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_kxgettext.c_file_line__new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_line = type { i8*, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.file_line* (i8*, i32)* @file_line__new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.file_line* @file_line__new(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.file_line*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call %struct.file_line* @malloc(i32 24)
  store %struct.file_line* %6, %struct.file_line** %5, align 8
  %7 = load %struct.file_line*, %struct.file_line** %5, align 8
  %8 = icmp eq %struct.file_line* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %19

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = load %struct.file_line*, %struct.file_line** %5, align 8
  %13 = getelementptr inbounds %struct.file_line, %struct.file_line* %12, i32 0, i32 0
  store i8* %11, i8** %13, align 8
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.file_line*, %struct.file_line** %5, align 8
  %16 = getelementptr inbounds %struct.file_line, %struct.file_line* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 8
  %17 = load %struct.file_line*, %struct.file_line** %5, align 8
  %18 = getelementptr inbounds %struct.file_line, %struct.file_line* %17, i32 0, i32 2
  store i32* null, i32** %18, align 8
  br label %19

19:                                               ; preds = %10, %9
  %20 = load %struct.file_line*, %struct.file_line** %5, align 8
  ret %struct.file_line* %20
}

declare dso_local %struct.file_line* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
